frontend/src/components/NavigationBar.css
.NavigationBar {
  position: fixed;
  left: 0;
  top: 0;
  height: 100vh;
  z-index: 10;
}

.NavigationBar.active {
  width: 100vw;
  background: rgb(0 0 0 / 50%);
}

.NavigationBar-inner {
  width: var(--nav-thickness);
  height: 100%;
  padding: 1.5rem 0;
  background: #fff;
  overflow: hidden;
  box-shadow: 0 0 0.3rem 0 rgb(0 0 0 / 15%);
}

.NavigationBar.active > .NavigationBar-inner {
  width: 18rem;
  max-width: 90vw;
  box-shadow: 0 0 1rem 0 rgb(0 0 0 / 20%);
  overflow-y: auto;
}

/* toggle button */

.NavigationBar-toggle {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 2.5rem;
  margin: 0 0 1rem;
  padding: 0 1rem;
  font: inherit;
  color: inherit;
  border: none;
  background: none;
  outline: none;
  cursor: pointer;
}

.NavigationBar-toggle:hover {
  background: #eee;
}

.NavigationBar-toggle-label {
  flex-grow: 1;
  text-align: left;
  font-size: 1.5rem;
}

.NavigationBar:not(.active) .NavigationBar-toggle-label {
  display: none;
}

/* navigation */

.NavigationBar-link {
  display: flex;
  height: 2.5rem;
  line-height: 2.5rem;
  text-decoration: none;
  color: inherit;
  white-space: nowrap;
}

.NavigationBar-link.active,
.NavigationBar-link:hover,
.NavigationBar-link:focus {
  background: #f6f6f6;
}

.NavigationBar-link.active {
  font-weight: bold;
  background: #eee;
}

.NavigationBar-link-icon {
  width: var(--nav-thickness);
  flex-shrink: 0;
  text-align: center;
}

.NavigationBar:not(.active) .NavigationBar-link:not(.active) .NavigationBar-link-icon {
  opacity: 0.6;
}

.NavigationBar-link-label {
  display: inline-block;
  margin-left: 0.5rem;
  flex-grow: 1;
  text-align: left;
}

.NavigationBar:not(.active) .NavigationBar-link-label {
  display: none;
}

@media (max-height: 20rem) or (max-width: 35rem) {
  .NavigationBar:not(.active) {
    width: 100vw;
    height: var(--nav-thickness);
    line-height: var(--nav-thickness);
  }

  .NavigationBar:not(.active) .NavigationBar-inner {
    width: 100%;
    height: var(--nav-thickness);
    padding: 0;
  }

  .NavigationBar:not(.active) .NavigationBar-toggle {
    display: inline-flex;
    width: var(--nav-thickness);
    height: 100%;
  }

  .NavigationBar:not(.active) .NavigationBar-link {
    display: inline-flex;
    width: var(--nav-thickness);
    height: 100%;
    line-height: inherit;
  }
}

